--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/mock": "^8.1.1",
+    "@graphql-tools/schema": "^7.1.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.2.6",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "path": "^0.12.7",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "classnames": "^2.2.6"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
