--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.6",
+    "@graphql-tools/load": "^6.2.7",
+    "@graphql-tools/merge": "^6.2.11",
     "@graphql-tools/mock": "^8.1.1",
     "@graphql-tools/schema": "^7.1.3",
     "@testing-library/jest-dom": "^5.11.4",
