--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@graphql-tools/json-file-loader": "^6.2.6",
     "@graphql-tools/load": "^6.2.7",
     "@graphql-tools/merge": "^6.2.11",
     "@graphql-tools/mock": "^8.1.1",
